<resources>
    <string name="app_name">โยคีคำนวนสารพัดสิ่ง</string>
    <string name="cal_menu">ฟังก์ชั่นการคำนวน</string>
    <string name="cal_menu1">คำนวนพื้นที่วงกลม</string>
    <string name="comimg_soon">อัพเดตเร็ว ๆ นี้</string>
    <string name="enter_r">ใส่รัศมีของวงกลม</string>
    <string name="calculate">คำนวณพื้นที่วงกลม</string>
    <string name="clear">ล้างค่า</string>
    <string name="result">ผลลัพธ์</string>
    <string name="circle_area">พื้นที่วงกลม</string>
    <string name="circle_area_header">ฟังก์ชั่นพื้นที่วงกลม</string>
    <string name="menu_bar_home">หน้าแรก</string>
    <string name="menu_bar_premium">อัพเกรดเป็นพรีเมี่ยม</string>
    <string name="rad_input_prompt">ระบุค่ารัศมี (r) ที่ต้องการคำนวน:</string>
    <string name="rad_output_prompt">ผลลัพธ์ (ตารางหน่วย):</string>
</resources>